update image upload response
